--- a/index.ipynb
+++ b/index.ipynb
@@ -110,11 +110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = None"
+    "ba_latitude = coordinates[0\n",
+    "                         ]"
    ]
   },
   {
