--- a/index.ipynb
+++ b/index.ipynb
@@ -110,12 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = coordinates[0\n",
-    "                         ]"
+    "ba_latitude = coordinates[0]"
    ]
   },
   {
@@ -124,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = None"
+    "ba_longitude = coordinates[1]"
    ]
   },
   {
